--- a/css/hoja_de_estilos.css
+++ b/css/hoja_de_estilos.css
@@ -1,9 +1,109 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/*Style for Navigation Bar*/
 body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar a {
+    float: left;
+    font-size: 3px;
+    color: white;
+    text-align: center;
+    padding: 12px 14px;
+    text-decoration: none;
+}
+
+.subnav {
+    float: left;
+    overflow: hidden;
+}
+
+.subnav .subnavbtn {
+    font-size: 3px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 12px 14px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.navbar a:hover,
+.subnav:hover .subnavbtn {
+    background-color: red;
+}
+
+.subnav-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    background-color: red;
+    width: 100%;
+    z-index: 1;
+}
+
+.subnav-content a {
+    float: left;
+    color: white;
+    text-decoration: none;
+}
+
+.subnav-content a:hover {
+    background-color: #eee;
+    color: black;
+}
+
+.subnav:hover .subnav-content {
+    display: block;
+}
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for */
+
+
+/*Style for the footer*/
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,25 +115,29 @@ ul {
     position: relative;
     display: flex;
 }
+
 ul li {
     position: relative;
     list-style: none;
     margin: 0 20px;
     cursor: pointer;
 }
+
 ul li a {
     text-decoration: none;
 }
+
 ul li a .fa-brands {
-    font-size: 6em;
+    font-size: 1em;
     color: #222;
 }
+
 ul li a::before {
     font-family: "FontAwesome";
     position: absolute;
     top: 0;
     left: 0;
-    font-size: 6em;
+    font-size: 1em;
     height: 0;
     overflow: hidden;
     transition: 0.5s ease-in-out;
@@ -41,23 +145,26 @@ ul li a::before {
 
 ul li:nth-child(1) a::before {
     content: "\f16d";
-    background-image: linear-gradient(45deg, 
-      #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,
-      #bc1888 100%);
+    background-image: linear-gradient(45deg,
+            #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%,
+            #bc1888 100%);
     -webkit-background-clip: text;
-     -webkit-text-fill-color: transparent;
-    border-bottom: 4px solid #dc2743;
+    -webkit-text-fill-color: transparent;
+    border-bottom: 1px solid #dc2743;
 }
+
 ul li:nth-child(2) a::before {
     content: "\f232";
     color: #25D366;
-    border-bottom: 4px solid #25D366;
+    border-bottom: 1px solid #25D366;
 }
+
 ul li:nth-child(3) a::before {
     content: "\f099";
     color: #1DA1F2;
-    border-bottom: 4px solid #1DA1F2;
+    border-bottom: 1px solid #1DA1F2;
 }
+
 ul li:hover a::before {
     height: 100%;
 }
