--- a/css/hoja_de_estilos.css
+++ b/css/hoja_de_estilos.css
@@ -1,15 +1,17 @@
+/*Style for general*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/*Style for Navigation Bar*/
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    background-color: #67318b;
 }
 
+/*Style for Navigation Bar*/
 .navbar {
     overflow: hidden;
     background-color: #333;
@@ -17,10 +19,10 @@ body {
 
 .navbar a {
     float: left;
-    font-size: 3px;
+    font-size: 15px;
     color: white;
     text-align: center;
-    padding: 12px 14px;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
@@ -30,11 +32,11 @@ body {
 }
 
 .subnav .subnavbtn {
-    font-size: 3px;
+    font-size: 15px;
     border: none;
     outline: none;
     color: white;
-    padding: 12px 14px;
+    padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -42,14 +44,14 @@ body {
 
 .navbar a:hover,
 .subnav:hover .subnavbtn {
-    background-color: red;
+    background-color: rgb(108, 9, 238);
 }
 
 .subnav-content {
     display: none;
     position: absolute;
     left: 0;
-    background-color: red;
+    background-color: rgb(108, 9, 238);
     width: 100%;
     z-index: 1;
 }
@@ -69,10 +71,24 @@ body {
     display: block;
 }
 
-/*Style for */
+/*Style for home*/
+/*#fondo{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-repeat: no-repeat;
+}*/
 
 
-/*Style for */
+/*Style for noe*/
+#noefondo{
+
+}
+#noeimg{
+    width: 8%;
+    height: 8%;
+    border-radius: 50%;
+}
 
 
 /*Style for */
@@ -104,11 +120,13 @@ body {
 
 /*Style for the footer*/
 footer {
-    display: flex;
+    display:grid;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     background: #000;
+    text-align: center;
+    color: #73b854;
 }
 
 ul {
@@ -128,7 +146,7 @@ ul li a {
 }
 
 ul li a .fa-brands {
-    font-size: 1em;
+    font-size: 5em;
     color: #222;
 }
 
@@ -137,7 +155,7 @@ ul li a::before {
     position: absolute;
     top: 0;
     left: 0;
-    font-size: 1em;
+    font-size: 5em;
     height: 0;
     overflow: hidden;
     transition: 0.5s ease-in-out;
@@ -150,19 +168,19 @@ ul li:nth-child(1) a::before {
             #bc1888 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    border-bottom: 1px solid #dc2743;
+    border-bottom: 2px solid #dc2743;
 }
 
 ul li:nth-child(2) a::before {
     content: "\f232";
     color: #25D366;
-    border-bottom: 1px solid #25D366;
+    border-bottom: 2px solid #25D366;
 }
 
 ul li:nth-child(3) a::before {
-    content: "\f099";
-    color: #1DA1F2;
-    border-bottom: 1px solid #1DA1F2;
+    content: "\f08c";
+    color: #077ac2;
+    border-bottom: 2px solid #077ac2;
 }
 
 ul li:hover a::before {
