--- a/css/hoja_de_estilos.css
+++ b/css/hoja_de_estilos.css
@@ -8,7 +8,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: #67318b;
     font-family: 'Open Sans', arial, sans-serif;
     background: rgb(123, 158, 158);
 }
@@ -82,7 +81,7 @@ body {
 }*/
 
 
-/*Style for noe*/
+/*Style for partners*/
 #noefondo {}
 
 #noeimg {
