--- a/css/hoja_de_estilos.css
+++ b/css/hoja_de_estilos.css
@@ -6,7 +6,6 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     font-family: 'Open Sans', arial, sans-serif;
     background: rgb(123, 158, 158);
@@ -231,11 +230,11 @@ body {
 
 #fork {
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
-    color: #000;
+    color: rgb(207, 63, 63);
     text-decoration: none;
-    border: 1px solid #000;
+    border: 1px solid rgb(207, 63, 63);
     padding: .5em .7em;
     margin: 1%;
     transition: color .5s;
@@ -245,11 +244,11 @@ body {
 #fork:before {
     content: '';
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 130%;
     height: 100%;
-    background: #000;
+    background: rgb(207, 63, 63);
     z-index: -1;
     transform-origin: 0 0;
     transform: translateX(-100%) skewX(-45deg);
