--- a/css/hoja_de_estilos.css
+++ b/css/hoja_de_estilos.css
@@ -505,8 +505,43 @@ body {
     transform: translateX(0) skewX(-25deg);
 }
 
-/*Style for */
+/*Style for register*/
 
+/*button home from register*/
+#register {
+    position: fixed;
+    top: 4%;
+    right: 15.5%;
+    color: rgb(207, 63, 63);
+    text-decoration: none;
+    border: 1px solid rgb(207, 63, 63);
+    padding: .5em .7em;
+    margin: 1%;
+    transition: color .5s;
+    overflow: hidden;
+}
+
+#register:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 130%;
+    height: 100%;
+    background: rgb(207, 63, 63);
+    z-index: -1;
+    transform-origin: 0 0;
+    transform: translateX(-100%) skewX(-45deg);
+    transition: transform .5s;
+}
+
+#register:hover {
+    color: #fff;
+}
+
+#register:hover:before {
+    transform: translateX(0) skewX(-25deg);
+}
 
 /*Style for */
 
