--- a/css/hoja_de_estilos.css
+++ b/css/hoja_de_estilos.css
@@ -433,11 +433,62 @@ body {
     }
 }
 
-/*login*/
+/*Style for register*/
+label.radio {
+	cursor: pointer;
+  text-indent: 35px;
+  overflow: visible;
+  display: inline-block;
+  position: relative;
+  margin-bottom: 15px;
+}
+
+label.radio:before {
+  background: #3a57af;
+  content:'';
+  position: absolute;
+  top:2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+}
+
+label.radio:after {
+	opacity: 0;
+	content: '';
+	position: absolute;
+	width: 0.5em;
+	height: 0.25em;
+	background: transparent;
+	top: 7.5px;
+	left: 4.5px;
+	border: 3px solid #ffffff;
+	border-top: none;
+	border-right: none;
+
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+
+input[type=radio]:checked + label:after {
+	opacity: 1;
+}
+
+hr{
+  color: #a9a9a9;
+  opacity: 0.3;
+}
+
+/*BUTTONS*/
+/*button home from login*/
 #login {
     position: fixed;
     top: 4%;
-    right: 10%;
+    right: 12.5%;
     color: rgb(207, 63, 63);
     text-decoration: none;
     border: 1px solid rgb(207, 63, 63);
@@ -469,11 +520,11 @@ body {
     transform: translateX(0) skewX(-25deg);
 }
 
-/*button home from login*/
-#return {
+/*button home from home*/
+#home {
     position: fixed;
-    top: 3%;
-    right: 10%;
+    top: 4%;
+    right: 17.5%;
     color: rgb(207, 63, 63);
     text-decoration: none;
     border: 1px solid rgb(207, 63, 63);
@@ -483,7 +534,7 @@ body {
     overflow: hidden;
 }
 
-#return:before {
+#home:before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -497,21 +548,19 @@ body {
     transition: transform .5s;
 }
 
-#return:hover {
+#home:hover {
     color: #fff;
 }
 
-#return:hover:before {
+#home:hover:before {
     transform: translateX(0) skewX(-25deg);
 }
-
-/*Style for register*/
 
 /*button home from register*/
 #register {
     position: fixed;
     top: 4%;
-    right: 15.5%;
+    right: 5.5%;
     color: rgb(207, 63, 63);
     text-decoration: none;
     border: 1px solid rgb(207, 63, 63);
@@ -542,6 +591,9 @@ body {
 #register:hover:before {
     transform: translateX(0) skewX(-25deg);
 }
+
+/*Style for */
+
 
 /*Style for */
 
